[package]
name = "fast_divert_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
wdk = "0.4.1"
wdk-alloc = "0.4.1"
wdk-panic = "0.4.1"
wdk-sys = "0.5.1"

[build-dependencies]
wdk-build = "0.5.1"
bindgen = "0.72.1"

[lib]
name = "fast_divert_driver"
crate-type = ["cdylib"]

[features]
default = []

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
    ".",
    "dll",
    "demo/packet_dump",
    "demo/packet_count",
    "demo/file_monitor",
    "demo/bpf_filter",
    "demo/stream_monitor",
    "demo/socket_monitor",
    "demo/flow_monitor",
    "demo/passthrough",
]
