[package]
name = "fastdivert"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastdivert"
path = "src/lib.rs"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Services",
    "Win32_System_IO",
    "Win32_System_Threading",
] }
anyhow = "1.0.102"

